project details updated

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nextra-docs-template",
+  "name": "bubblegum-ui",
   "version": "0.0.1",
-  "description": "Nextra docs template",
+  "description": "Bubblegum docs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,12 +11,12 @@
     "type": "git",
     "url": "git+https://github.com/shuding/nextra-docs-template.git"
   },
-  "author": "Shu Ding <g@shud.in>",
+  "author": "github.com/tayv",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
+    "url": "https://github.com/tayv/bubblegum-docs/issues"
   },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
+  "homepage": "https://github.com/tayv/bubblegum-docs#readme",
   "dependencies": {
     "next": "^13.0.6",
     "nextra": "latest",
