Updated repo url

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
+    "url": "git+https://github.com/tayv/bubblegum-docs.git"
   },
   "author": "github.com/tayv",
   "license": "MIT",
